@@ -275,8 +275,8 @@ Author: Rafael Ferreira Silva <rafael@webphp.com.br>
         'This options allows you to change the default type of article displayed. Default Article View Type: Html Articles (2)'=>'This options allows you to change the default type of article displayed. Default Article View Type: Html Articles (2)',
         'The name of your Seagull index file'=>'The name of your Seagull index file',
         'Currently supported editors are xinha, fck and htmlarea, and you must have the relevant libs in your www dir' => 'Currently supported editors are xinha, fck and htmlarea, and you must have the relevant libs in your www dir',
-        'This is the module that will be loaded if none are specified, ie, when you call index.php (FC only)'=>'This is the module that will be loaded if none are specified, ie, when you call index.php (FC only)',
-        'This is the manager class that will be loaded if none are specified (FC only)'=>'This is the manager class that will be loaded if none are specified (FC only)',
+        'This is the module that will be loaded if none are specified, ie, when you call index.php'=>'This is the module that will be loaded if none are specified, ie, when you call index.php',
+        'This is the manager class that will be loaded if none are specified'=>'This is the manager class that will be loaded if none are specified - use the shortname, ie use "faq" and not "FaqMgr"',
         'Disable navigation altogether with this switch'=>'Disable navigation altogether with this switch',
         'Use this option to choose from various menu types - currently only 1 provided'=>'Use this option to choose from various menu types - currently only 1 provided',
         'Defines the appearance of the navigation menu. Preview and make additional changes in the navigation module manager'=>'Defines the appearance of the navigation menu. Preview and make additional changes in the navigation module manager',
